trying to find the issue point cya tommorrow inchaelah :]

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -21,7 +21,9 @@ FLAGS = -Wall -Wextra -Werror -g
 LIBFT_DR = ../libft
 
 NAME = push_swap
-BUILD_DR = ../build
+##../build
+
+BUILD_DR = .
 INCLUDES_DR = ../libft/includes
 CC = cc
 AR = ar rc
